[gd_scene load_steps=41 format=1]

[ext_resource path="res://Data/Player/Movement.gd" type="Script" id=1]
[ext_resource path="res://Data/Effects/speech_bubble.png" type="Texture" id=2]
[ext_resource path="res://Data/NPC/idle.tres" type="Animation" id=3]
[ext_resource path="res://Data/Player/idle_hands_player.tres" type="Animation" id=4]
[ext_resource path="res://Data/NPC/prone_crawl.tres" type="Animation" id=5]
[ext_resource path="res://Data/NPC/prone_idle.tres" type="Animation" id=6]
[ext_resource path="res://Data/Player/shoot_hands_player.tres" type="Animation" id=7]
[ext_resource path="res://Data/Player/Melee.tres" type="Animation" id=8]
[ext_resource path="res://Data/Player/Shoot.tres" type="Animation" id=9]
[ext_resource path="res://Data/Player/thigh.png" type="Texture" id=10]
[ext_resource path="res://Data/Player/lower_leg.png" type="Texture" id=11]
[ext_resource path="res://Data/Player/torso.png" type="Texture" id=12]
[ext_resource path="res://Data/Player/Crawl_Prone_R1.png" type="Texture" id=13]
[ext_resource path="res://Data/Player/Crawl_Prone_R2.png" type="Texture" id=14]
[ext_resource path="res://Data/Player/Idle_Prone_R.png" type="Texture" id=15]
[ext_resource path="res://Data/Player/Run_R2.png" type="Texture" id=16]
[ext_resource path="res://Data/Player/Idle_R.png" type="Texture" id=17]
[ext_resource path="res://Data/Player/Run_R1.png" type="Texture" id=18]
[ext_resource path="res://Data/Player/Walk_Crouch_R2.png" type="Texture" id=19]
[ext_resource path="res://Data/Player/Updated peter/crouch_walk_2.png" type="Texture" id=20]
[ext_resource path="res://Data/Player/Updated peter/idle_crouch.png" type="Texture" id=21]
[ext_resource path="res://Data/Tiles/Ground Tiles/shock.png" type="Texture" id=22]
[ext_resource path="res://Data/Player/waist.png" type="Texture" id=23]
[ext_resource path="res://Data/Player/Head.png" type="Texture" id=24]
[ext_resource path="res://Data/Player/newArm.png" type="Texture" id=25]
[ext_resource path="res://Data/Player/bicep.png" type="Texture" id=26]
[ext_resource path="res://Data/Player/hand.png" type="Texture" id=27]
[ext_resource path="res://Data/Player/hand1.png" type="Texture" id=28]
[ext_resource path="res://Data/Weapons/Gun Parts/Base/rifle_frame.png" type="Texture" id=29]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5, 11 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 5, 5 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 30.0

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 76.0066

[sub_resource type="Animation" id=5]

resource/name = "run"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../body/leg_l:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, -30.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../body/leg_r:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 30.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../body/leg_l/Sprite:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -60.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../body/leg_r/Sprite:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0, 0.0, 10.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../body/head:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -13 ), Vector2( 0, -12 ), Vector2( 0, -13 ), Vector2( 0, -12 ), Vector2( 0, -13 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../body:transform/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.000385702, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -17 ), Vector2( 0, -19 ), Vector2( 0, -17 ), Vector2( 0, -19 ), Vector2( 0, -17 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 14, 4 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 6, 12 )

[sub_resource type="CircleShape2D" id=8]

custom_solver_bias = 0.0
radius = 9.0

[sub_resource type="SpriteFrames" id=9]

animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "prone_crawl",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "prone_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "crouch_walk_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "crouch_idle_r",
"speed": 5.0
} ]

[sub_resource type="ColorRamp" id=10]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 0, 0, 0, 1, 0.308594, 0.308594, 0.308594, 1 )

[sub_resource type="SpriteFrames" id=11]

animations = [ {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"players",
]]

z/z = -2
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -11 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, -5 )
shapes/1/trigger = true
collision/layers = 131072
collision/mask = 1
collision/margin = 0.0
script/script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 0, -100 )
anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000
limit/right = 10000000
limit/bottom = 25
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = null
config/pitch_random = 0.0

[node name="target" type="Position2D" parent="."]

transform/pos = Vector2( -1, -13 )

[node name="standing" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -11 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="prone" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -5 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[node name="jump_l" type="RayCast2D" parent="."]

transform/pos = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 65537
type_mask = 1

[node name="jump_r" type="RayCast2D" parent="."]

transform/pos = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 65537
type_mask = 1

[node name="fire_ready" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="hit_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="raycast" type="RayCast2D" parent="."]

enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="crouch" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, -15 )
enabled = true
cast_to = Vector2( 0, -5 )
layer_mask = 1
type_mask = 15

[node name="comment_box" type="Sprite" parent="."]

visibility/opacity = 0.8
transform/pos = Vector2( 14, -74 )
transform/scale = Vector2( 4, 4 )
z/z = -2
texture = ExtResource( 2 )

[node name="comment" type="Label" parent="comment_box"]

rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -9.0
margin/top = -7.0
margin/right = 63.0
margin/bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Area2D" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -19 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
priority = 11.0
collision/layers = 32
collision/mask = 1056

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 0, -19 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Area2D1" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -19 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
priority = 12.0
collision/layers = 32
collision/mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1"]

transform/pos = Vector2( 0, -19 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="move" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("")
anims/idle = ExtResource( 3 )
anims/idle_hands = ExtResource( 4 )
anims/prone_crawl = ExtResource( 5 )
anims/prone_idle = ExtResource( 6 )
anims/run = SubResource( 5 )
anims/shoot_hands = ExtResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Melee = ExtResource( 8 )
anims/Shoot = ExtResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="body" type="KinematicBody2D" parent="." groups=[
"players",
]]

transform/pos = Vector2( 0, -17 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 4 )
shapes/0/trigger = true
shapes/1/shape = SubResource( 7 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 4 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 8 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, -13 )
shapes/2/trigger = false
collision/layers = 18432
collision/mask = 0
collision/margin = 0.08

[node name="leg_l" type="Sprite" parent="body"]

editor/display_folded = true
transform/pos = Vector2( 1, 3 )
texture = ExtResource( 10 )
centered = false
offset = Vector2( -4, 0 )

[node name="Sprite" type="Sprite" parent="body/leg_l"]

transform/pos = Vector2( 1, 5 )
texture = ExtResource( 11 )
centered = false
offset = Vector2( -4, 0 )

[node name="leg_r" type="Sprite" parent="body"]

editor/display_folded = true
transform/pos = Vector2( -1, 3 )
texture = ExtResource( 10 )
centered = false
offset = Vector2( -4, 0 )

[node name="Sprite" type="Sprite" parent="body/leg_r"]

transform/pos = Vector2( 1, 5 )
texture = ExtResource( 11 )
centered = false
offset = Vector2( -4, 0 )

[node name="legs" type="AnimatedSprite" parent="body"]

transform/pos = Vector2( 0, -1 )
frames = SubResource( 9 )
animation = "idle"

[node name="secondaryEquip" type="Sprite" parent="body/legs"]

transform/pos = Vector2( -5, -20 )
transform/rot = -90.0

[node name="effects" type="Node2D" parent="body/legs"]

transform/pos = Vector2( 0, 18 )

[node name="shock" type="Particles2D" parent="body/legs/effects"]

transform/pos = Vector2( 0, -21 )
z/relative = false
config/amount = 3
config/lifetime = 0.2
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 10, 20 )
config/texture = ExtResource( 22 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 180.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/initial_angle = 1.0

[node name="freeze" type="Particles2D" parent="body/legs/effects"]

transform/pos = Vector2( 0, -21 )
z/relative = false
config/amount = 10
config/lifetime = 0.5
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 5, 20 )
config/local_space = false
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 10.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 10.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 180.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="burn" type="Particles2D" parent="body/legs/effects"]

transform/pos = Vector2( 0, -21 )
z/relative = false
config/amount = 10
config/lifetime = 1.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 5, 20 )
config/local_space = false
params/direction = 180.0
params/spread = 10.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = -10.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 5.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 10 )

[node name="waist" type="Sprite" parent="body"]

transform/pos = Vector2( -4, 4 )
texture = ExtResource( 23 )
centered = false

[node name="head" type="AnimatedSprite" parent="body"]

transform/pos = Vector2( 0, -13 )
frames = SubResource( 11 )
animation = "default"

[node name="Direction" type="RayCast2D" parent="body"]

transform/rot = 90.0
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="arm_r" type="Sprite" parent="body"]

editor/display_folded = true
visibility/self_opacity = 0.0
transform/pos = Vector2( -2, -2 )
texture = ExtResource( 25 )
centered = false
offset = Vector2( 0, -3 )

[node name="bicep" type="Sprite" parent="body/arm_r"]

editor/display_folded = true
transform/pos = Vector2( 0, -1.1344 )
transform/rot = -30.0
texture = ExtResource( 26 )
centered = false
offset = Vector2( 0, -4 )

[node name="forearm" type="Sprite" parent="body/arm_r/bicep"]

visibility/behind_parent = true
transform/pos = Vector2( 6.23107, 1.08341 )
transform/rot = 50.0
texture = ExtResource( 27 )
centered = false
offset = Vector2( 0, -3 )

[node name="hand" type="Sprite" parent="body/arm_r/bicep/forearm"]

visibility/behind_parent = true
transform/pos = Vector2( 4.9399, -1.45181 )
transform/rot = -20.0
texture = ExtResource( 28 )
centered = false
offset = Vector2( 0, -3 )

[node name="Gun" type="Sprite" parent="body/arm_r"]

visibility/visible = false
transform/pos = Vector2( 6, -6 )
texture = ExtResource( 29 )
centered = false

[node name="arm_l" type="Sprite" parent="body"]

editor/display_folded = true
visibility/self_opacity = 0.0
visibility/behind_parent = true
transform/pos = Vector2( -2, -2 )
texture = ExtResource( 25 )
centered = false
offset = Vector2( 0, -3 )

[node name="bicep" type="Sprite" parent="body/arm_l"]

visibility/behind_parent = true
transform/pos = Vector2( 5, -1.1344 )
texture = ExtResource( 26 )
centered = false
offset = Vector2( -1, -4 )

[node name="forearm" type="Sprite" parent="body/arm_l/bicep"]

visibility/behind_parent = true
transform/pos = Vector2( 6.00569, 0.199072 )
texture = ExtResource( 27 )
centered = false
offset = Vector2( 0, -3 )

[node name="hand" type="Sprite" parent="body/arm_l/bicep/forearm"]

visibility/behind_parent = true
transform/pos = Vector2( 6, -1 )
texture = ExtResource( 28 )
centered = false
offset = Vector2( 0, -3 )

[node name="prone" type="CollisionShape2D" parent="body"]

visibility/visible = false
transform/pos = Vector2( 0, 4 )
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="standing" type="CollisionShape2D" parent="body"]

visibility/visible = false
transform/pos = Vector2( 0, 4 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 1

[node name="headcollision" type="CollisionShape2D" parent="body"]

visibility/visible = false
transform/pos = Vector2( 0, -13 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 2

[node name="Label" type="Label" parent="body"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -49.0
margin/right = 20.0
margin/bottom = -35.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


